toolchain_type(
  name="odrazel_toolchain_gcc_type",
  visibility=["//visibility:public"]
)

load(":defs.bzl", "odrazel_toolchain_gcc")

odrazel_toolchain_gcc(
  name="impl"
)

toolchain(
  name="odrazel_toolchain_gcc",
  toolchain_type = ":odrazel_toolchain_gcc_type",
  toolchain = ":impl",
  visibility = ["//visibility:public"]
)
